FISH-6451 removed java.locale.providers=COMPAT
it causes date parsing exception